// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonCard tests is a basic snapshot 1`] = `
<a
  class="flex flex-col max-w-[10.625rem] group/card undefined"
  data-testid="test card"
  href="/persons/1"
>
  <div
    class="relative self-center mb-3"
  >
    <img
      alt="alternative text"
      class="w-[9.625rem] h-[9.625rem] rounded-[50%] object-cover"
      data-nimg="1"
      decoding="async"
      height="231"
      loading="lazy"
      src="/_next/image?url=%2F&w=384&q=75"
      srcset="/_next/image?url=%2F&w=256&q=75 1x, /_next/image?url=%2F&w=384&q=75 2x"
      style="color: transparent;"
      width="154"
    />
  </div>
  <p
    class="text-100 text-neutral-900 dark:text-dark-neutral-800 line-clamp-3"
  >
    test text
  </p>
</a>
`;

exports[`PersonCard tests is a snapshot with showRating 1`] = `
<a
  class="flex flex-col max-w-[10.625rem] group/card undefined"
  data-testid="test card"
  href="/persons/1"
>
  <div
    class="relative self-center mb-3"
  >
    <img
      alt="alternative text"
      class="w-[9.625rem] h-[9.625rem] rounded-[50%] object-cover"
      data-nimg="1"
      decoding="async"
      height="231"
      loading="lazy"
      src="/_next/image?url=%2F&w=384&q=75"
      srcset="/_next/image?url=%2F&w=256&q=75 1x, /_next/image?url=%2F&w=384&q=75 2x"
      style="color: transparent;"
      width="154"
    />
    <span
      class="absolute bottom-0 left-0 w-10 h-10 overflow-hidden flex items-center justify-center rounded-[50%] border-2 border-blue-700 dark:border-blue-400 bg-neutral-200 dark:bg-dark-neutral-300 text-blue-700 dark:text-blue-300 font-bold"
    >
      <span
        class="sr-only"
      >
        personCard.rating
      </span>
      30
    </span>
  </div>
  <p
    class="text-100 text-neutral-900 dark:text-dark-neutral-800 line-clamp-3"
  >
    test text
  </p>
</a>
`;

exports[`PersonCard tests is a snapshot with title 1`] = `
<a
  class="flex flex-col max-w-[10.625rem] group/card undefined"
  data-testid="test card"
  href="/persons/1"
>
  <div
    class="relative self-center mb-3"
  >
    <img
      alt="alternative text"
      class="w-[9.625rem] h-[9.625rem] rounded-[50%] object-cover"
      data-nimg="1"
      decoding="async"
      height="231"
      loading="lazy"
      src="/_next/image?url=%2F&w=384&q=75"
      srcset="/_next/image?url=%2F&w=256&q=75 1x, /_next/image?url=%2F&w=384&q=75 2x"
      style="color: transparent;"
      width="154"
    />
  </div>
  <h6
    class="-tracking-[0.01em] text-300 sm:text-400  leading-3 font-bold mb-1 line-clamp-2 text-neutral-1000 dark:text-dark-neutral-900 group-hover/card:text-neutral-800 group-active/card:text-neutral-700 dark:group-hover/card:text-dark-neutral-700 dark:group-active/card:text-dark-neutral-600 transition-colors duration-150"
  >
    test title
  </h6>
  <p
    class="text-100 text-neutral-900 dark:text-dark-neutral-800 line-clamp-3"
  >
    test text
  </p>
</a>
`;
